--- a/static/normalize.css
+++ b/static/normalize.css
@@ -32,6 +32,11 @@
     display: block;
   }
   
+  ul,li{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
   /**
    * Correct the font size and margin on `h1` elements within `section` and
    * `article` contexts in Chrome, Firefox, and Safari.
