--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -60,7 +60,67 @@ div:focus {
   }
 }
 
-// main-container global css
-.app-container {
+// 公共页面设置
+.app-main {
+  /*50 = navbar  */
+  background: #f0f2f5;
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+
+.app-content{
+  background: #ffffff;
   padding: 20px;
+  margin: 24px 16px;
+  border-radius: 5px;
+  aside {
+    background: #eef1f6;
+    padding: 8px 24px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    display: block;
+    line-height: 32px;
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    color: #2c3e50;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  // 搜索项
+  .search-form{
+      margin-bottom: 5px;
+      .ant-form-item{
+          margin-bottom: 15px;
+          .ant-select-single,input{width: 200px;}
+          .ant-btn{
+              margin-right: 8px;
+          }
+      }
+  }
+  // 表格配置
+  .table-config{
+    margin-bottom: 15px;
+  }
+  // 分页
+  .table-pagination{
+      margin-top: 15px;
+      text-align: right;
+  }
+}
+// 弹出框标题增加蓝色伪类样式
+.el-dialog__title{
+  display: flex;
+  align-items: center;
+}
+.el-dialog__title:before{
+  display: inline-block;
+  margin-right: 8px;
+  content: '';
+  width: 3px;
+  height: 18px;
+  background: #1890ff;
 }
